gc-industries-devops-superheros/infra/kyverno_policy/policy-01.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-resources
      match:
        resources:
          namespaces:
          - superheros
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - kube-system
            - istio-system
            - kyverno
      validate:
        message: "CPU and memory requests/limits are required"
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
