gc-industries-devops-superheros/infra/kyverno_policy/policy-02.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
    - name: validate-image-tag
      match:
        resources:
          namespaces:
          - superheros
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - kube-system
            - istio-system
            - kyverno
            - monitoring
            - argocd
      validate:
        message: "Using 'latest' tag is not allowed"
        pattern:
          spec:
            containers:
              - image: "!*:latest"
