gc-industries-devops-superheros/infra/kyverno_policy/policy-04.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-team-label
spec:
  rules:
    - name: add-team-label
      match:
        resources:
          namespaces:
          - superheros
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - kube-system
            - istio-system
            - kyverno
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              team: platform
